add Remixicons, google fonts, Header & Nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
         <!--=============== REMIXICONS ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
@@ -18,6 +18,45 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
+            <div class="header__border"></div>
+
+            <nav class="nav container">
+                <a href="#" class="nav__logo">
+                    <img src="assets/img/logo.png" alt="logo">
+                    Coffetto
+                </a>
+
+                <div class="nav__menu">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <span></span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <span></span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <span></span>
+                            </a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <span></span>
+                            </a>
+                        </li>
+
+                        
+                    </ul>
+                </div>
+
+            </nav>
             
         </header>
 
