--- a/index.html
+++ b/index.html
@@ -29,30 +29,34 @@
                 <div class="nav__menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link">
-                                <span></span>
+                            <a href="#home" class="nav__link">
+                                <i class="ri-home-5-fill"></i>
+                                <span>Home</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#" class="nav__link">
-                                <span></span>
+                            <a href="#about" class="nav__link">
+                                <i class="ri-award-fill"></i>
+                                <span>About</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#" class="nav__link">
-                                <span></span>
+                            <a href="#steps" class="nav__link">
+                                <i class="ri-compass-3-fill"></i>
+                                <span>Steps</span>
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#" class="nav__link">
-                                <span></span>
+                            <a href="#testimonial" class="nav__link">
+                                <i class="ri-message-3-fill"></i>
+                                <span>Testimonial</span>
                             </a>
                         </li>
 
-                        
+
                     </ul>
                 </div>
 
@@ -64,7 +68,12 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-                
+                <!-- <div class="home__container container grid">
+                    <div class="home__data">
+                        <h3 class="home__subtitle"></h3>
+                        EXCEPTIONAL QUALITY
+                    </div>
+                </div> -->
             </section>
 
             <!--==================== PRODUCTS ====================-->
