--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive coffee website - Bedimcode</title>
+        <title>Responsive coffee website</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
@@ -82,7 +82,9 @@
                         </h1>
 
                         <p class="home__description">
-                            Each select coffee bean reflects our commitment to Peruvian coffee growers, who bring the best select coffee to your table. 
+                            Each select coffee bean reflects our commitment 
+                            to Peruvian coffee growers, who bring the best 
+                            select coffee to your table. 
                         </p>
 
                         <a href="#" class="button">
