--- a/index.html
+++ b/index.html
@@ -98,7 +98,42 @@
 
             <!--==================== PRODUCTS ====================-->
             <section class="products">
-                
+                <div class="products__bg section">
+                    <div class="products__container container grid">
+                        <div class="products__data">
+                            <a href="#about" class="products__button">
+                                Scroll Down <i class="ri-arrow-down-s-line"></i>
+                            </a>
+
+                            <p class="product__description">
+                                We strive to form deep partnerships with farmers 
+                                from all over the world to create perspective 
+                                together and form healthy working relationships 
+                                built on trust and respect.
+                            </p>
+                        </div>
+
+                        <div class="products__content">
+                            <article class="products__card">
+                                <img src="assets/img/product-coffee-1.png" alt="product image" class="products__img">
+                                <h3 class="products__name">Classic coffee</h3>
+                                <span class="products__price">$17.90</span>
+                            </article>
+
+                            <article class="products__card">
+                                <img src="assets/img/product-coffee-2.png" alt="product image" class="products__img">
+                                <h3 class="products__name">Black coffee</h3>
+                                <span class="products__price">$24.90</span>
+                            </article>
+
+                            <article class="products__card">
+                                <img src="assets/img/product-coffee-3.png" alt="product image" class="products__img">
+                                <h3 class="products__name">Strong coffee</h3>
+                                <span class="products__price">$32.90</span>
+                            </article>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== ABOUT ====================-->
