--- a/index.html
+++ b/index.html
@@ -226,7 +226,22 @@
 
             <!--==================== TESTIMONIAL ====================-->
             <section class="testimonial" id="testimonial">
-                
+                <div class="testimonial__bg section">
+                    <div class="testimonial__container container grid">
+                        <div class="testimonial__data">
+                            <h2 class="section__title">
+                                Coffee is the best drink in the 
+                                morning, it keeps you focused.
+                            </h2>
+
+                            <span class="testimonial__name">
+                                John Doe
+                            </span>
+                        </div>
+
+                        <img src="assets/img/testimonial-coffee.png" alt="testimonial image" class="testimonial__img">
+                    </div>
+                </div>
             </section>
         </main>
 
